--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,11 @@ dependencyResolutionManagement {
 }
 rootProject.name = "ITMob"
 include ':app'
+
+dependencyResolutionManagement {
+
+    repositories {
+
+        maven { url 'https://jitpack.io' }
+    }
+}
