--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Java language implementation
+    implementation "androidx.biometric:biometric:1.1.0"
+
+    // Kotlin
+    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha04"
 }
