--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     implementation "androidx.biometric:biometric:1.1.0"
+    implementation "com.vinaygaba:creditcardview:1.0.4"
+    implementation 'com.github.maxpilotto:credit-card-view:8.0.0'
+
+
 }
