- Integrated Calender Function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
+            android:name="com.example.itmob.ParticipateActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
