--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,36 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     implementation "androidx.biometric:biometric:1.1.0"
+    implementation 'com.github.gastricspark:scrolldatepicker:0.0.1'
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+
+
+    dependencies {
+        def room_version = "2.4.2"
+
+        implementation "androidx.room:room-runtime:$room_version"
+        annotationProcessor "androidx.room:room-compiler:$room_version"
+
+        // optional - RxJava2 support for Room
+        implementation "androidx.room:room-rxjava2:$room_version"
+
+        // optional - RxJava3 support for Room
+        implementation "androidx.room:room-rxjava3:$room_version"
+
+        // optional - Guava support for Room, including Optional and ListenableFuture
+        implementation "androidx.room:room-guava:$room_version"
+
+        // optional - Test helpers
+        testImplementation "androidx.room:room-testing:$room_version"
+
+        // optional - Paging 3 Integration
+        implementation "androidx.room:room-paging:2.5.0-alpha02"
+    }
+
+
+
 
 }
+
+
+
