--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        jcenter()
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +11,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
 rootProject.name = "ITMob"
@@ -20,5 +22,6 @@ dependencyResolutionManagement {
     repositories {
 
         maven { url 'https://jitpack.io' }
+        jcenter()
     }
 }
